...
                android:scaleType="center"
                android:src="@drawable/place_holder"/>
        </FrameLayout>

        <!-- Input fields -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold1"
                android:maxLength="32"
                android:hint="Event Name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventDateInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold1"
                android:hint="Event Date"
                android:focusable="false"
                android:clickable="true"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventStartTimeInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventStartTimeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold1"
                    android:hint="Event Start Time"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventEndTimeInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventEndTimeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold1"
                    android:hint="Event End Time"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventDescriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/eventDateInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fontFamily="@font/bold1"
                android:hint="Event Description"
                android:gravity="top|start"
                android:maxLength="132"
...
        <!-- Buttons for QR code generation -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newQrButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Generate QRCode"
                android:textColor="@color/red"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintStart_toStartOf="parent"
...
